# gym-turtlebot

./: .gitignore  404.html  README.md  build.sh  index.html  pyproject.toml  setup.sh  sitemap.xml
.devcontainer/: Dockerfile
.github/workflows/: docs.yaml  ros.yaml
LICENSE/: index.html
Tutorial/: index.html
docs/: Tutorial.md
scripts/: teleop.sh
search/: search_index.json
src/tb4_drl_navigation/: package.xml  setup.cfg  setup.py
src/tb4_drl_navigation/LICENSE/: index.html
src/tb4_drl_navigation/tb4_drl_navigation/environments/: __init__.py
src/tb4_drl_navigation/tb4_drl_navigation/environments/envs/: __init__.py  turtlebot4_env.py
src/tb4_drl_navigation/tb4_drl_navigation/environments/maps/: static_world.yaml
src/tb4_drl_navigation/tb4_drl_navigation/environments/utils/: env_helper.py  ros_gz.py
src/tb4_drl_navigation/tb4_drl_navigation/environments/wrappers/: __init__.py
src/tb4_drl_navigation/tb4_drl_navigation/envs/: __init__.py
src/tb4_drl_navigation/tb4_drl_navigation/envs/diffdrive/: __init__.py  scenario_generator.py  turtlebot4.py
src/tb4_drl_navigation/tb4_drl_navigation/envs/diffdrive/maps/: static_world.data  static_world.pgm  static_world.yaml
src/tb4_drl_navigation/tb4_drl_navigation/envs/utils/: ros_gz.py
src/tb4_drl_navigation/tb4_drl_navigation/examples/: sac.py
src/tb4_drl_navigation/tb4_drl_navigation/utils/: dtype_convertor.py  launch.py  rviz.py
src/tb4_drl_navigation/tb4_drl_navigation/wrappers/: __init__.py  flatten_observation.py
src/turtlebot4/tb4_description/: package.xml
src/turtlebot4/tb4_description/rviz/: config_drl.rviz  config_map.rviz
src/turtlebot4/tb4_gz_sim/: package.xml
src/turtlebot4/tb4_gz_sim/configs/: ekf.yaml  tb4_bridge.yaml
src/turtlebot4/tb4_gz_sim/launch/: bridge.launch.py  gz_sim.launch.py  simulation.launch.py  (+1 more)
(+5 files in other folders)
