[project]
name = "gym-turtlebot"
version = "0.1.0"
description = "A ROS2 and Gazebo based gymnasium environment for turtlebot4"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.1.1",
    "opencv-python>=4.11.0.86",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "stable-baselines3[extra]>=2.6.0",
    "tensorboard>=2.19.0",
    "tqdm>=4.67.1",
    "transforms3d>=0.4.2",
]
