<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb4_drl_navigation</name>
  <version>0.0.0</version>
  <description>TurtleBot4 Gymnasium Environment</description>
  <maintainer email="anurye.yesuf@gmail.com">ahmed</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>visualization_msgs</depend>
  <depend>robot_localization</depend>
  <depend>tb4_gz_sim</depend>

  <!-- Python dependencies -->
  <depend>python3-gymnasium-pip</depend>
  <depend>python3-tqdm</depend>
  <depend>python3-transforms3d</depend>
  <depend>python3-stable-baselines3-pip</depend>
  <depend>python3-tensorboard-pip</depend>
  <depend>python3-opencv</depend>
  <depend>python3-sklearn</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
